My_project/build/log/idf_py_stdout_output_10708
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\Espressif\ESP\My_project\build\bootloader\esp-idf\esptool_py && E:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe E:/Espressif/frameworks/esp-idf-v5.2.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/Espressif/ESP/My_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
ccache E:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/Espressif/ESP/My_project/build/config -IE:/Espressif/ESP/My_project/main -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/newlib/platform_include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include/freertos -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/xtensa/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/esp_additions/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc/esp32 -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/port/esp32/. -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/heap/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32 -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/platform_port/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/esp32/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include/esp32 -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/esp32 -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_common/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/soc -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/include/private -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/esp32/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/deprecated_include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps/sntp -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/lwip/src/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/freertos/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/arch -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/sys -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/deprecated -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/analog_comparator/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/dac/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gpio/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gptimer/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2c/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2s/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/ledc/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/mcpwm/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/parlio/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/pcnt/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/rmt/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdio_slave/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdmmc/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sigma_delta/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/spi/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/temperature_sensor/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/twai/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/uart/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/usb_serial_jtag/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/esp32/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_pm/include -IE:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_ringbuf/include -IE:/Espressif/ESP/My_project/components/lib_gpio -IE:/Espressif/ESP/My_project/components/lib_uart -IE:/Espressif/ESP/My_project/managed_components/espressif__led_strip/include -IE:/Espressif/ESP/My_project/managed_components/espressif__led_strip/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=E:/Espressif/ESP/My_project=. -fmacro-prefix-map=E:/Espressif/frameworks/esp-idf-v5.2.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c E:/Espressif/ESP/My_project/main/app_main.c
E:/Espressif/ESP/My_project/main/app_main.c: In function 'UART_set_callback':
E:/Espressif/ESP/My_project/main/app_main.c:12:28: error: pointer targets in passing argument 2 of 'UART_tx_data' differ in signedness [-Werror=pointer-sign]
   12 |    UART_tx_data(UART_NUM_0,data,len);
      |                            ^~~~
      |                            |
      |                            uint8_t * {aka unsigned char *}
In file included from E:/Espressif/ESP/My_project/main/app_main.c:8:
E:/Espressif/ESP/My_project/components/lib_uart/app_uart.h:14:53: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
   14 | void UART_tx_data( uart_port_t uart_num,const char *data, uint16_t len);
      |                                         ~~~~~~~~~~~~^~~~
E:/Espressif/ESP/My_project/main/app_main.c: At top level:
E:/Espressif/ESP/My_project/main/app_main.c:10:20: warning: 'TAG' defined but not used [-Wunused-variable]
   10 | static const char *TAG = "main";
      |                    ^~~
cc1.exe: some warnings being treated as errors
[3/10] Building C object esp-idf/lib_uart/CMakeFiles/__idf_lib_uart.dir/app_uart.c.obj
ninja: build stopped: subcommand failed.
